2008-11-10  Emmanuele Bassi  <ebassi@linux.intel.com>

	* tests/conform/test-label-cache.c:
	* tests/conform/test-pick.c:
	* tests/conform/test-timeline.c: Show all the output messages only
	if the test was done with the verbose flag turned on.

	* tests/interactive/test-main.c: Do not use the (gpointer*) cast,
	but use a temporary gpointer instead.

2008-11-10  Robert Bragg  <robert@linux.intel.com>

	* tests/conform/Makefile.am:
	* tests/conform/wrapper.sh:
	* tests/conform/test-conform-main.c:
	* tests/conform/test-timeline.c:
	Adds Neil's updates to test-timeline.c so it now works with the new
	unit testing infrastructure.
	
	Also some fixes to ensure wrappers get setup correctly for the
	timeline tests.

	* tests/interactive/test-main.c:
	cast the symbol return pointer as (gpointer *) to avoid warning

	* tests/conform/test-pick.c:
	g_assert that the test passes, instead of using exit()

	* test/conform/ADDING_NEW_TESTS:
	Fixes a silly typo

2008-11-08  Emmanuele Bassi  <ebassi@linux.intel.com>

	* tests/conform/Makefile.am:
	* tests/conform/test-actor-invariants.c:
	* tests/conform/test-conform-main.c: Move the actor invariants
	unit to the conform section of the test suite.

	* tests/interactive/Makefile.am:
	* tests/interactive/test-entry-auto.c:
	* tests/interactive/test-invariants.c: Remove the entry-auto
	and invariants test, since those two belong to the conform
	section.

2008-11-07  Robert Bragg  <robert@linux.intel.com>

	Bug 1162 - Re-works the tests/ to use the glib-2.16 unit testing
	framework
	
	* configure.ac:
	* tests/*:
	The tests have been reorganised into different categories: conformance,
	interactive and micro benchmarks.
	- conformance tests can be run as part of automated tests
	- interactive tests are basically all the existing tests
	- micro benchmarks focus on a single performance metric
	
	I converted the timeline tests to conformance tests and also added some
	tests from Neil Roberts and Ebassi.
	